--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Express 2</title>
+    <title>Add Item</title>
 </head>
 <body>
-    <form action="/quotes" method="POST">
+    <form action="/API/item" method="POST">
         <input type="text" placeholder="name" name="name">
-        <input type="text" placeholder="quote" name="quote">
+        <input type="text" placeholder="title" name="title">
+        <input type="text" placeholder="description" name="description">
+        <input type="text" placeholder="tag" name="tag">
+        <input type="text" placeholder="misc" name="misc">
+        <input type="text" placeholder="category" name="category">
         <button type="submit">Submit</button>
     </form>
 </body>
